--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "check": "svelte-check --tsconfig ./tsconfig.json"
+    "check": "svelte-check --tsconfig ./tsconfig.json",
+    "prettier-fix": "prettier \"src/**/*.{svelte,ts,css,json}\" --loglevel warn --write --plugin prettier-plugin-svelte"
   },
   "devDependencies": {
     "@skeletonlabs/skeleton": "^2.0.0",
@@ -25,6 +26,9 @@
     "vite": "^4.4.5"
   },
   "dependencies": {
-    "@tanstack/svelte-query": "^4.35.0"
+    "@tanstack/svelte-query": "^4.35.0",
+    "iconify-icon": "^1.0.8",
+    "prettier": "3.0.3",
+    "prettier-plugin-svelte": "^3.0.3"
   }
 }
