--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
+    "test:ui": "vitest --ui",
+    "test:watch": "vitest",
     "preview": "vite preview",
     "check": "svelte-check --tsconfig ./tsconfig.json",
     "prettier-fix": "prettier \"src/**/*.{svelte,ts,css,json}\" --loglevel warn --write --plugin prettier-plugin-svelte"
@@ -14,16 +16,20 @@
     "@skeletonlabs/skeleton": "^2.0.0",
     "@skeletonlabs/tw-plugin": "^0.1.0",
     "@sveltejs/vite-plugin-svelte": "^2.4.2",
+    "@testing-library/svelte": "^4.0.3",
     "@tsconfig/svelte": "^5.0.0",
     "@types/node": "^20.5.9",
+    "@vitest/ui": "^0.34.4",
     "autoprefixer": "^10.4.15",
+    "jsdom": "^22.1.0",
     "postcss": "^8.4.29",
     "svelte": "^4.0.5",
     "svelte-check": "^3.4.6",
     "tailwindcss": "^3.3.3",
     "tslib": "^2.6.0",
     "typescript": "^5.0.2",
-    "vite": "^4.4.5"
+    "vite": "^4.4.5",
+    "vitest": "^0.34.4"
   },
   "dependencies": {
     "@tanstack/svelte-query": "^4.35.0",
